# dyn-error

./: Cargo.toml  README.md
.github/workflows/: publish-to-crates.yml
src/: dyn_result.rs  equality.rs  lib.rs
src/err_box/: errors.rs  fn_impl.rs  macro_impl.rs  mod.rs
tests/: equality.rs  readme_first.rs  readme_second.rs
