[package]
name = "dyn-error"
version = "0.2.0"
authors = ["Gianluca Costa <gianluca@gianlucacosta.info>"]
edition = "2021"
description = "Error-related utilites for Rust"
repository = "https://github.com/giancosta86/dyn-error"
license = "MIT"
keywords = ["error", "utilities", "boxed", "dyn"]
categories = ["rust-patterns"]
include = [
    "LICENSE",
    "README.md",
    "/benches/",
    "/examples/",
    "/src/",
    "/tests/",
]

[package.metadata.docs.rs]
all-features = true
